--- a/.env
+++ b/.env
@@ -1,13 +1,17 @@
-NODE_ENV="development"
+PORT= 3300
 
-PORT=3000
-
+## database typeorm
+DB_TYPE="mysql"
 DB_HOST="localhost"
 DB_PORT="3306"
 DB_USERNAME="root"
 DB_PASSWORD=""
-DB_NAME="nest-app-v03"
+DATABASE="nest-app-v04"
+DB_SYNCHRONIZE="true"
+DB_AUTO_LOAD_MODELS="true"
+DB_ENTITIES_SRC="dist/database/entities/*.entity{.ts,.js}"
+DB_MIGRATIONS_SRC=""
 
 ## JWT
-JWT_SECRET="ASD357894GHJKL9547jalhcaTH > akjgavLKSXUK"
-JWT_EXPIRES_IN="6h"
+JWT_SECRET="elshamo elsudany ahsn men l berdany #ShamOOOOOOO"
+JWT_EXPIRES_IN='6h'
